# burn-and-earn

./: Cargo.toml  TESTING.md
src/: contract.rs  error.rs  lib.rs  multitest.rs  state.rs
